@@ -24,6 +24,7 @@ import net.mcreator.io.FileIO;
 import net.mcreator.io.UserFolderManager;
 import net.mcreator.io.net.WebIO;
 import net.mcreator.io.zip.ZipIO;
+import net.mcreator.preferences.PreferencesManager;
 import net.mcreator.ui.MCreatorApplication;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -33,7 +34,7 @@ import org.reflections.util.ConfigurationBuilder;
 
 import javax.annotation.Nullable;
 import java.io.File;
-import java.net.MalformedURLException;
+import java.lang.reflect.Constructor;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.*;
@@ -59,6 +60,8 @@ public class PluginLoader extends URLClassLoader {
 	private final List<Plugin> plugins;
 	private final List<PluginUpdateInfo> pluginUpdates;
 
+	private final List<JavaPlugin> javaPlugins;
+
 	private final Reflections reflections;
 
 	/**
@@ -68,13 +71,19 @@ public class PluginLoader extends URLClassLoader {
 		super(new URL[] {}, null);
 
 		this.plugins = new ArrayList<>();
+		this.javaPlugins = new ArrayList<>();
 		this.pluginUpdates = new ArrayList<>();
+
+		DynamicURLClassLoader javaPluginCL = new DynamicURLClassLoader(new URL[] {}, Thread.currentThread().getContextClassLoader());
 
 		UserFolderManager.getFileFromUserFolder("plugins").mkdirs();
 
 		List<Plugin> pluginsLoadList = new ArrayList<>();
 		pluginsLoadList.addAll(listPluginsFromFolder(new File("./plugins/"), true));
 		pluginsLoadList.addAll(listPluginsFromFolder(UserFolderManager.getFileFromUserFolder("plugins"), false));
+
+		if (System.getenv("MCREATOR_PLUGINS_FOLDER") != null)
+			pluginsLoadList.addAll(listPluginsFromFolder(new File(System.getenv("MCREATOR_PLUGINS_FOLDER")), false));
 
 		Collections.sort(pluginsLoadList);
 
@@ -93,15 +102,20 @@ public class PluginLoader extends URLClassLoader {
 			try {
 				LOG.info("Loading plugin: " + plugin.getID() + " from " + plugin.getFile() + ", weight: "
 						+ plugin.getWeight());
-				if (plugin.getFile().isDirectory()) {
-					addURL(plugin.getFile().toURI().toURL());
-				} else {
-					addURL(new URL("jar:file:" + plugin.getFile().getAbsolutePath() + "!/"));
+				addURL(plugin.toURL());
+
+				if (PreferencesManager.PREFERENCES.hidden.enableJavaPlugins && plugin.getJavaPlugin() != null) {
+					javaPluginCL.addURL(plugin.toURL());
+
+					Class<?> clazz = javaPluginCL.loadClass(plugin.getJavaPlugin());
+					Constructor<?> ctor = clazz.getConstructor(Plugin.class);
+					JavaPlugin javaPlugin = (JavaPlugin) ctor.newInstance(plugin);
+					javaPlugins.add(javaPlugin);
 				}
 
 				plugin.loaded = true;
-			} catch (MalformedURLException e) {
-				LOG.error("Failed to add plugin to the loader", e);
+			} catch (Exception e) {
+				LOG.error("Failed to load plugin " + plugin.getID(), e);
 			}
 		}
 
@@ -149,6 +163,13 @@ public class PluginLoader extends URLClassLoader {
 	}
 
 	/**
+	 * @return <p> A {@link List} of all loaded Java plugins.</p>
+	 */
+	protected List<JavaPlugin> getJavaPlugins() {
+		return javaPlugins;
+	}
+
+	/**
 	 * @return <p>A list of all plugin updates detected.</p>
 	 */
 	public List<PluginUpdateInfo> getPluginUpdates() {
@@ -156,6 +177,8 @@ public class PluginLoader extends URLClassLoader {
 	}
 
 	synchronized private List<Plugin> listPluginsFromFolder(File folder, boolean builtin) {
+		LOG.debug("Loading plugins from: " + folder);
+
 		List<Plugin> loadList = new ArrayList<>();
 
 		File[] pluginFiles = folder.listFiles();
